--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Edson Akira Ito <edson.akira21@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "ENV=dev webpack-dev-server",
     "build": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "devDependencies": {
@@ -19,6 +19,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.11.2",
     "image-webpack-loader": "^3.3.1",
     "node-sass": "^4.5.3",
@@ -35,6 +36,7 @@
     "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-number-format": "^2.0.2",
     "react-router-dom": "^4.1.2"
   }
 }
